Added more sensible example schedule.

--- a/index.html
+++ b/index.html
@@ -98,8 +98,12 @@ etherpad: https://etherpad.mozilla.org/???
 -->
 <p>
     <strong>Requirements:</strong> Participants should bring a laptop that is Internet connected and has a functioning browser.
-    If you have it, a specialized device for recording video (mobile phones and laptops are OK). Also, make sure you read the
-    <a href="#preparation">Preparation</a> section below.
+    If you have it, a specialized device for recording audio and video (mobile phones and laptops are OK) - throughout the two days,
+    we are going to record one another teaching in pairs or threes. It does not have to be high-quality,
+    but it should be good enough that you can understand what someone is saying.
+
+    <p><em>Also, make sure you read the
+    <a href="#preparation">Preparation</a> section below.</em></p>
 </p>
 
 <!--
@@ -150,55 +154,80 @@ etherpad: https://etherpad.mozilla.org/???
 <h2>Schedule</h2>
 
 <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-6">
+        <h3>Day 1</h3>
         <table class="table table-striped">
             <tr>
-                <td>09:30</td>
-                <td>Arrival and setup help</td>
+                <td>09:00</td>
+                <td>Welcome and overview; three stages of cognitive development; teaching performance</td>
             </tr>
             <tr>
-                <td>10:00</td>
-                <td>Introduction: using the Notebook interface</td>
-            </tr>
-            <tr>
-                <td>11:00</td>
+                <td>10:30</td>
                 <td>Coffee break</td>
             </tr>
             <tr>
-                <td>11:15</td>
-                <td>Data manipulation and visualisation using the Notebook</td>
+                <td>11:00</td>
+                <td>Three stages of cognitive development; teaching performance - continued</td>
             </tr>
             <tr>
-                <td>12:30</td>
+                <td>12:00</td>
                 <td>Lunch break</td>
             </tr>
             <tr>
-                <td>13:15</td>
-                <td>Sharing notebook files, NBviewer and converting between formats.</td>
+                <td>13:00</td>
+                <td>Formative vs. summative assessment; teach performance</td>
             </tr>
             <tr>
                 <td>14:30</td>
                 <td>Coffee break</td>
             </tr>
             <tr>
-                <td>14:45</td>
-                <td>Practical exercises</td>
+                <td>15:00</td>
+                <td>Formative vs. summative assessment; teach performance - continued</td>
             </tr>
             <tr>
                 <td>16:00</td>
-                <td>Overview of other available features</td>
-            </tr>
-            <tr>
-                <td>16:15</td>
-                <td>Questions and discussion</td>
-            </tr>
-            <tr>
-                <td>17:00</td>
                 <td>Wrap-up</td>
             </tr>
         </table>
     </div>
-
+    <div class="col-md-6">
+        <h3>Day 2</h3>
+        <table class="table table-striped">
+            <tr>
+                <td>09:00</td>
+                <td>Recap; motivation and demotivation; teaching performance<br></td>
+            </tr>
+            <tr>
+                <td>10:30</td>
+                <td>Coffee break</td>
+            </tr>
+            <tr>
+                <td>11:00</td>
+                <td>Recap; motivation and demotivation; teaching performance - continued</td>
+            </tr>
+            <tr>
+                <td>12:00</td>
+                <td>Lunch break</td>
+            </tr>
+            <tr>
+                <td>13:00</td>
+                <td>Overview of existing materials; how to contribute; next steps</td>
+            </tr>
+            <tr>
+                <td>14:30</td>
+                <td>Coffee break</td>
+            </tr>
+            <tr>
+                <td>15:00</td>
+                <td>Overview of existing materials; how to contribute; next steps - continued</td>
+            </tr>
+            <tr>
+                <td>16:00</td>
+                <td>Wrap-up</td>
+            </tr>
+        </table>
+    </div>
 </div>
 
 <h2 id="preparation" name="preparation">Preparation</h2>
@@ -208,7 +237,7 @@ etherpad: https://etherpad.mozilla.org/???
         in Introductory Programming: What Works?"</a>,
         which is a good recent summary of results specific to teaching programming, and <a target="_blank"
                                                                                            href="http://cacm.acm.org/blogs/blog-cacm/189498-top-10-myths-about-teaching-computer-science/fulltext">Mark
-            Guzdial's "Top 10 Myths About Teaching Computer Science</a>,
+            Guzdial's "Top 10 Myths About Teaching Computer Science"</a>,
         which is a nice overview of things that <em>are not</em> true, but are widely believed.
     </li>
 
@@ -223,10 +252,6 @@ etherpad: https://etherpad.mozilla.org/???
         lessons page</a> and browse the lessons to see what
         is currently taught in Software Carpentry.
 
-    <li>Throughout the two days, we are going to record one another teaching in pairs or threes, so please bring a mobile
-        phone or hand-held camera that can record audio and video - it does not have to be high-quality,
-        but it should be good enough that you can understand what someone is saying.
-    </li>
     <li>If you are interested in doing more reading, <a target="_blank"
                                                         href="http://www.amazon.com/Teaching-What-You-Dont-Know/dp/0674066170">Huston's
         "Teaching What You Don't Know"</a> is a lot of fun - many will recognize themselves in these
@@ -246,14 +271,14 @@ etherpad: https://etherpad.mozilla.org/???
         Introductory Programming: What Works?"</a></li>
     <li><a target="_blank"
            href="http://cacm.acm.org/blogs/blog-cacm/189498-top-10-myths-about-teaching-computer-science/fulltext">Mark
-        Guzdial's "Top 10 Myths About Teaching Computer Science</a></li>
+        Guzdial's "Top 10 Myths About Teaching Computer Science"</a></li>
     <li><a target="_blank"
-           href="http://www.amazon.com/How-Learning-Works-Research-Based-Jossey-Bass/dp/0470484101/">"How
+           href="http://www.amazon.com/How-Learning-Works-Research-Based-Jossey-Bass/dp/0470484101/">Susan A. Ambrose's "How
         Learning Works"</a></li>
     <li><a target="_blank"
            href="http://www.amazon.com/Teaching-What-You-Dont-Know/dp/0674066170">Huston's
         "Teaching What You Don't Know"</a></li>
     <li><a target="_blank"
-           href="http://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393081591">"Building
+           href="http://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393081591">Elisabeth Green's "Building
         a Better Teacher"</a></li>
 </ul>
