Changed title to Instructor Training

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: workshop
 root: .
-title: Software and Data Carpentry's "Train the Trainer" Workshop
+title: Software and Data Carpentry's "Instructor Training" Workshop
 venue: Where this is hapening
 address: Room ???, Institution, Street, City, Country
 latlng: 53.4674, -2.23396
