Updated Etherpad link and agenda

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@ humantime: 09:00-16:00
 startdate: 2015-11-23
 enddate: 2015-11-24
 instructor: ["Greg Wilson", "Aleksandra Pawlik"]
-helper: ["TBC"]
 contact: "a.nenadic@manchester.ac.uk"
-etherpad: https://etherpad.mozilla.org/zcanCjWFip
+etherpad: http://pad.software-carpentry.org/2015-11-23-Manchester-Instructor-Training
 ---
 
 
@@ -165,23 +164,36 @@ etherpad: https://etherpad.mozilla.org/zcanCjWFip
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
-                <td>Welcome and overview; three stages of cognitive development; teaching performance</td>
+                <td>Welcome and introductions</td>
             </tr>
+            <tr>
+                <td>9:30</td>
+                <td>Overview: key concepts and training goals</td>
+            </tr>
+            <tr>
+                <td>10:00</td>
+                <td>Formative vs. summative assessment</td>
+            </tr>
+            
             <tr>
                 <td>10:30</td>
                 <td>Coffee break</td>
             </tr>
             <tr>
                 <td>11:00</td>
-                <td>Three stages of cognitive development; teaching performance - continued</td>
+                <td>Teaching as performance art</td>
             </tr>
             <tr>
                 <td>12:00</td>
                 <td>Lunch break</td>
             </tr>
-            <tr>
+             <tr>
                 <td>13:00</td>
-                <td>Formative vs. summative assessment; teach performance</td>
+                <td>Discussion on the exercise on teaching as performance art</td>
+            </tr>
+            <tr>
+                <td>14:00</td>
+                <td>Concept maps</td>
             </tr>
             <tr>
                 <td>14:30</td>
@@ -189,11 +201,19 @@ etherpad: https://etherpad.mozilla.org/zcanCjWFip
             </tr>
             <tr>
                 <td>15:00</td>
-                <td>Formative vs. summative assessment; teach performance - continued</td>
+                <td> Concept maps - continued</td>
+            </tr>
+             <tr>
+                <td>16:00</td>
+                <td>Motivation and demotivation. Diversity. Indifference.</td>
             </tr>
             <tr>
-                <td>16:00</td>
+                <td>16:45</td>
                 <td>Wrap-up</td>
+            </tr>
+            <tr>
+                <td>17:00</td>
+                <td>Close</td>
             </tr>
         </table>
     </div>
@@ -202,23 +222,31 @@ etherpad: https://etherpad.mozilla.org/zcanCjWFip
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
-                <td>Recap; motivation and demotivation; teaching performance<br></td>
+                <td>Recap and homework review<br></td>
+            </tr>
+            <tr>
+                <td>09:30</td>
+                <td>Alternative formative assessment techniques</td>
             </tr>
             <tr>
                 <td>10:30</td>
                 <td>Coffee break</td>
             </tr>
-            <tr>
+             <tr>
                 <td>11:00</td>
-                <td>Recap; motivation and demotivation; teaching performance - continued</td>
-            </tr>
+                <td>Live coding and active learning</td>
+            </tr
             <tr>
                 <td>12:00</td>
                 <td>Lunch break</td>
             </tr>
             <tr>
                 <td>13:00</td>
-                <td>Overview of existing materials; how to contribute; next steps</td>
+                <td>Overview of Software and Data Carpentry infrastructure</td>
+            </tr>
+             <tr>
+                <td>13:30</td>
+                <td>Setting up and running a workshop</td>
             </tr>
             <tr>
                 <td>14:30</td>
@@ -226,11 +254,19 @@ etherpad: https://etherpad.mozilla.org/zcanCjWFip
             </tr>
             <tr>
                 <td>15:00</td>
-                <td>Overview of existing materials; how to contribute; next steps - continued</td>
+                <td>Overview of existing materials; how to contribute</td>
             </tr>
             <tr>
                 <td>16:00</td>
+                <td>Next setps</td>
+            </tr>
+            <tr>
+                <td>16:45</td>
                 <td>Wrap-up</td>
+            </tr>
+            <tr>
+                <td>17:00</td>
+                <td>Close</td>
             </tr>
         </table>
     </div>
