--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: workshop
 root: .
 title: Software and Data Carpentry's "Instructor Training" Workshop
 venue: University of Manchester
-address: Atlas Rooms 1&2, Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL
+address: Atlas Rooms 1 and 2, Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL
 latlng: 53.467674, -2.233924
 humandate: 23-24 November 2015
 humantime: 09:00-16:00
