--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@ etherpad: http://pad.software-carpentry.org/2015-11-23-Manchester-Instructor-Tra
         findings
         it reports.
 
-    <li>Finally, please go to <a target="_blank" href=" http://software-carpentry.org/lessons.html">Software Carpentry's
-        lessons page</a> and browse the lessons to see what
-        is currently taught in Software Carpentry.
+    <li>Finally, please go to <a target="_blank" href=" http://software-carpentry.org/lessons.html">Software Carpentry's</a> and <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's</a>
+        lessons pages and browse the lessons to see what
+        is currently taught in Software and Data Carpentry.
 
     <li>If you are interested in doing more reading, <a target="_blank"
                                                         href="http://www.amazon.com/Teaching-What-You-Dont-Know/dp/0674066170">Huston's
