Added Karin to Trainers

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ humandate: 23-24 November 2015
 humantime: 09:00-16:00
 startdate: 2015-11-23
 enddate: 2015-11-24
-instructor: ["Greg Wilson", "Aleksandra Pawlik"]
+instructor: ["Greg Wilson", "Karin Lagesen", "Aleksandra Pawlik"]
 contact: "a.nenadic@manchester.ac.uk"
 etherpad: http://pad.software-carpentry.org/2015-11-23-Manchester-Instructor-Training
 ---
