--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ venue: University of Manchester
 address: Atlas Rooms 1 and 2, Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL
 latlng: 53.467674, -2.233924
 humandate: 23-24 November 2015
-humantime: 09:00-16:00
+humantime: 09:00-17:00
 startdate: 2015-11-23
 enddate: 2015-11-24
 instructor: ["Greg Wilson", "Karin Lagesen", "Aleksandra Pawlik"]
@@ -37,7 +37,7 @@ etherpad: http://pad.software-carpentry.org/2015-11-23-Manchester-Instructor-Tra
 </h4>
 
 <p>
-    <strong>Date:</strong>
+    <strong>Date and time:</strong>
     {{page.humandate}}, {{page.humantime}}
 </p>
 
