--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ etherpad: http://pad.software-carpentry.org/2015-11-23-Manchester-Instructor-Tra
             </tr>
             <tr>
                 <td>16:00</td>
-                <td>Next setps</td>
+                <td>Next steps</td>
             </tr>
             <tr>
                 <td>16:45</td>
