--- a/index.html
+++ b/index.html
@@ -211,20 +211,24 @@ etherpad: http://pad.software-carpentry.org/2015-11-23-Manchester-Instructor-Tra
         <h3>Day 2</h3>
         <table class="table table-striped">
             <tr>
-                <td>09:00</td>
-                <td>Recap and homework review<br></td>
+                <td>09:15</td>
+                <td>Live coding and active learning<br></td>
             </tr>
             <tr>
-                <td>09:30</td>
-                <td>Alternative formative assessment techniques</td>
+                <td>10:00</td>
+                <td>Teaching as performance art - exercise 2</td>
             </tr>
             <tr>
                 <td>10:30</td>
                 <td>Coffee break</td>
             </tr>
              <tr>
-                <td>11:00</td>
-                <td>Live coding and active learning</td>
+                <td>11:00 </td>
+                <td>Homework and workshop operations</td>
+            </tr
+              <tr>
+                <td>11:30 </td>
+                <td>Motivation and demotivation</td>
             </tr
             <tr>
                 <td>12:30</td>
@@ -232,18 +236,15 @@ etherpad: http://pad.software-carpentry.org/2015-11-23-Manchester-Instructor-Tra
             </tr>
             <tr>
                 <td>13:30</td>
-                <td>Overview of Software and Data Carpentry infrastructure</td>
+                <td>Alernative formative assessment</td>
             </tr>
-             <tr>
-                <td>14:00</td>
-                <td>Setting up and running a workshop</td>
-            </tr>
+          
             <tr>
-                <td>14:30</td>
+                <td>15:00</td>
                 <td>Coffee break</td>
             </tr>
             <tr>
-                <td>15:00</td>
+                <td>15:15</td>
                 <td>Overview of existing materials; how to contribute</td>
             </tr>
             <tr>
