--- a/index.html
+++ b/index.html
@@ -186,23 +186,23 @@ etherpad: http://pad.software-carpentry.org/2015-11-23-Manchester-Instructor-Tra
                 <td>Concept maps</td>
             </tr>
             <tr>
-                <td>14:30</td>
+                <td>15:00</td>
                 <td>Coffee break</td>
             </tr>
             <tr>
-                <td>15:00</td>
-                <td> Concept maps - continued</td>
+                <td>15:30</td>
+                <td> Faded examples</td>
             </tr>
              <tr>
                 <td>16:00</td>
-                <td>Motivation and demotivation. Diversity. Indifference.</td>
+                <td> Reversed Instructional Design. Learning objectives. </td></td>
             </tr>
             <tr>
-                <td>16:45</td>
+                <td>16:15</td>
                 <td>Wrap-up</td>
             </tr>
             <tr>
-                <td>17:00</td>
+                <td>16:30</td>
                 <td>Close</td>
             </tr>
         </table>
