Changed style for Evenbrite.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ etherpad:
 
 <h2>Workshop Registration</h2>
 
-<h4 class="alert" style="padding: 10px; margin: 0px 0px 10px 0px;">
+<h4 class="jumbotron" style="padding: 10px; margin: 0px 0px 10px 0px;">
     Register for the workshop
     <a target="_blank" href="https://www.eventbrite.com/e/elixir-aai-workshop-tickets-19929099473">via EventBrite</a>.
 </h4>
