--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ etherpad:
 <hr/>
 
 <h2> Acknowledgement and support</h2>
-<p> This workshop is supported by <a target="_blank" href="http://elixir-uk.org/">ELIXIR-UK</a> and <a target="_blank" href="https://aarc-project.eu/">AARC project</a>.</p>
+<p> This workshop is supported by <a target="_blank" href="http://elixir-uk.org/">ELIXIR-UK</a> and the <a target="_blank" href="https://aarc-project.eu/">AARC project</a>.</p>
 
 <hr/>
 
