--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ title: ELIXIR AAI Workshop
 venue: University of Manchester
 address: Atlas Rooms 1 & 2, Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL
 latlng: 53.467674, -2.233924
-humandate: XX-YY March 2016
+humandate: 15-16 March 2016
 humantime: 09:00-17:00
-startdate: 2016-03-XX
-enddate: 2016-03-YY
+startdate: 2016-03-15
+enddate: 2016-03-16
 instructor: []
 contact: ["a.nenadic@manchester.ac.uk", "ari-matti.saren@csc.fi"]
 etherpad:
