Updated workshop information

--- a/index.html
+++ b/index.html
@@ -17,13 +17,24 @@ etherpad:
 <h2>Workshop Information</h2>
 
 <p>
-    This workshop covers the basics of Authentication and Authorisation Infrastructure (AAI), getting started with Shibboleth and setting up Identity Providers (IdPs) and Service Providers (SPs).
+    This workshop covers the basics of Authentication and Authorisation Infrastructure (AAI), getting started with Shibboleth 
+    and setting up Identity Providers (IdPs) and Service Providers (SPs).
 </p>
 <p>
-    The workshop is a mix of lectures and hands-on lessons where participants will have an apportunity to play around with installing and setting up code.
+    The workshop is intended for organizations that provide resources (e.g. research data) and services 
+    (e.g. processing of the research data) for scientific research and education in various fields, such as bioinformatics, 
+    high energy physics, arts and humanities and so forth. 
 </p>
 <p>
-    Training materials are based on SWITCH AAI Shibboleth Training - see the <a href="#prepararation">Preparation</a> section below.
+    The aim of this training is to help the resource and service providers to make their resources and services 
+    available to the users through identity federations. If the concept of the identity federation is not familiar 
+    to the reader, the reader should first read the training module <a href=https://aarc-project.eu/documents/training-modules/federations-101/>Federations 101</a>
+    that explains the basic concepts of federated identity. 
+</p>
+
+<p>
+    The workshop is a mix of lectures and hands-on lessons where participants will have an apportunity to play 
+    around with installing and setting up code.
 </p>
 
 <p>
