Additions to schedule

--- a/index.html
+++ b/index.html
@@ -144,7 +144,31 @@ etherpad:
 <hr/>
 
 <h2>Schedule</h2>
+<p>
+The workshop has two parts: Day 1 is common to all participants. Day 2 will have parallel sessions to cover 
+more community specific topics.
+</p>
 
+<h3>Day 1: Providing online services to a SAML based identity federation using Shibboleth software</h3>
+<p>
+A resource or service provider needs to install a server called Service Provider (SP) and integrate it with 
+his or her service in order to securely provide resources and services to a SAML based identity federation 
+online. In this submodule the participants install, test and configure a Service Provider using open source 
+Shibboleth SP software. The goal is to make the participants familiar with the basics configuration of 
+Shibboleth SP. At the end of the training participants should be familiar with the basic aspects of running 
+a Shibboleth SP.
+</p>
+<p>
+Main Goals of the Training
+<ul>
+<li>Install and configure a Shibboleth Service Provider 2</li>
+<li>Know how and where to configure basic functionalities</li>
+<li>Learn how to protect static web pages and applications</li>
+<li>Understand how attributes can be used within web applications</li>
+</ul>
+</p>
+
+<h3>Day 2</h3>
 <div class="row">
     <div class="col-md-6">
         <h3>Day 1</h3>
