--- a/index.html
+++ b/index.html
@@ -202,18 +202,23 @@ Main Goals of the Training
                 <td>15:15</td>
                 <td>Integrating ELIXIR groups into the SAML SP</td>
             </tr>
+            tr>
+                <td>16:15</td>
+                <td>Wrap-up and post-workshop questionnaire</td>
+            </tr>
             <tr>
                 <td>16:30</td>
-                <td>End</td>
+                <td>Close</td>
+            </tr>
             
         </table>
     </div>
     <div class="col-md-6">
-        <h3>Day 2</h3>
+        <h3>DARIAH</h3>
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
-                <td>Live coding<br></td>
+                <td>TBA</td>
             </tr>
             <tr>
                 <td>10:30</td>
@@ -221,7 +226,7 @@ Main Goals of the Training
             </tr>
              <tr>
                 <td>11:00 </td>
-                <td></td>
+                <td>TBA</td>
             </tr>
             <tr>
                 <td>12:30</td>
@@ -229,7 +234,7 @@ Main Goals of the Training
             </tr>
             <tr>
                 <td>13:30</td>
-                <td></td>
+                <td>TBA</td>
             </tr>
             <tr>
                 <td>15:00</td>
@@ -237,7 +242,7 @@ Main Goals of the Training
             </tr>
             <tr>
                 <td>15:15</td>
-                <td></td>
+                <td>TBA</td>
             </tr>
             <tr>
                 <td>16:15</td>
