--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Main Goals of the Training
 <h3>Day 2</h3>
 <div class="row">
     <div class="col-md-6">
-        <h3>ELIXIR AAI</h3>
+        <h3>ELIXIR</h3>
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
