--- a/index.html
+++ b/index.html
@@ -168,6 +168,44 @@ Main Goals of the Training
 </ul>
 </p>
 
+        <table class="table table-striped">
+            <tr>
+                <td>09:00</td>
+                <td>TBA</td>
+            </tr>
+            <tr>
+                <td>10:30</td>
+                <td>Coffee break</td>
+            </tr>
+             <tr>
+                <td>11:00 </td>
+                <td>TBA</td>
+            </tr>
+            <tr>
+                <td>12:30</td>
+                <td>Lunch break</td>
+            </tr>
+            <tr>
+                <td>13:30</td>
+                <td>TBA</td>
+            </tr>
+            <tr>
+                <td>15:00</td>
+                <td>Coffee break</td>
+            </tr>
+            <tr>
+                <td>15:15</td>
+                <td>TBA</td>
+            </tr>
+            <tr>
+                <td>16:15</td>
+                <td>Wrap-up and post-workshop questionnaire</td>
+            </tr>
+            <tr>
+                <td>16:30</td>
+                <td>Close</td>
+            </tr>
+        </table>
 <h3>Day 2</h3>
 <div class="row">
     <div class="col-md-6">
