--- a/index.html
+++ b/index.html
@@ -79,9 +79,31 @@ etherpad:
   Specify the requirements for the workshop, e.g. software that needs to be pre-installed, etc.
 -->
 <p>
-    <strong>Requirements:</strong> Participants should bring a laptop - if you do not have one, please let the organisers know in advance. You may also be paired with someone else.
+    <strong>Requirements:</strong> 
 </p>
-
+<p>>
+    Participants should bring a laptop - if you do not have one, please let the organisers know in advance. You may 
+    also be paired with someone else.
+</p>
+<p>
+Participants should have a basic understanding of federations and federated identity management, 
+including the terms and the benefits. Participants should also be familiar with the concept 
+and the motivation of running Authentication and Authorization Infrastructure (AAI) services. 
+The basic Linux skills are also strongly recommended.
+</p>
+<p>
+The training is performed on a virtual machine (VM). The VM image that can be run in Virtual 
+Box (recommended) or VMware Player/Fusion. To run the SP Training VM the following minimal r
+equirements have to be met:
+<ul>
+<li>User must have administration privileges on the laptop</li>
+<li>Any recent (< 4 years) Intel or AMD processor.</li>
+<li>4 GByte RAM (at least 1.5GB free memory)</li>
+<li>12 GByte free harddisk space</li>
+<li>Internet Connectivity</li>
+<li><a href=https://www.virtualbox.org/>VirtualBox</a> (or <a href=http://www.vmware.com/products/player/>VMWare Player</a>) installed and fully operational.</li>
+</ul>
+</p
 <p>
     Also, have a look at the documentation from the <a href="#prepararation">Preparation</a> section below.
 </p>
