--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Main Goals of the Training
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
-                <td>TBA</td>
+                <td>Introduction to AAI</td>
             </tr>
             <tr>
                 <td>10:30</td>
@@ -201,7 +201,7 @@ Main Goals of the Training
             </tr>
              <tr>
                 <td>11:00 </td>
-                <td>TBA</td>
+                <td>Shibboleth</td>
             </tr>
             <tr>
                 <td>12:30</td>
@@ -209,7 +209,7 @@ Main Goals of the Training
             </tr>
             <tr>
                 <td>13:30</td>
-                <td>TBA</td>
+                <td>Shibboleth</td>
             </tr>
             <tr>
                 <td>15:00</td>
@@ -217,7 +217,7 @@ Main Goals of the Training
             </tr>
             <tr>
                 <td>15:15</td>
-                <td>TBA</td>
+                <td>Shibboleth</td>
             </tr>
             <tr>
                 <td>16:30</td>
