--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: workshop
 root: .
-title: ELIXIR AAI Workshop
+title: AAI workshop for service providers
 venue: University of Manchester
 address: Atlas Rooms 1 & 2, Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL
 latlng: 53.467674, -2.233924
@@ -17,21 +17,21 @@ etherpad:
 <h2>Workshop Information</h2>
 
 <p>
-    This workshop covers the basics of Authentication and Authorisation Infrastructure (AAI), getting started with Shibboleth 
-    and setting up Identity Providers (IdPs) and Service Providers (SPs).
+    The workshop is intended particular for organizations that provide resources and services for ELIXIR (life sciences) a
+    nd DARIAH (art and humanities) research infrastructures. The workshop is divided into two parts. The first part is 
+    more generic and useful to any service provider interested in providing online services to SAML based identity 
+    federation. The second part is more specific and focuses on integrating a service with ELIXIR and DARIAH research 
+    infrastructure respectively.
 </p>
 <p>
-    The workshop is intended for organizations that provide resources (e.g. research data) and services 
-    (e.g. processing of the research data) for scientific research and education in various fields, such as bioinformatics, 
-    high energy physics, arts and humanities and so forth. 
+    The aim of this workshop is to help the service providers to make their resources and services available to the 
+    users of the research infrastructure. This workshop has a down-to-earth and hands-on approach that will be rather 
+    technical and detailed at times. The workshop teaches in pracitse how to install the open source Shibboleth 
+    software needed to integrate in the research infrastructure. The participants will install, test and configure 
+    a Service Provider using open source Shibboleth SP software. The goal is to make the participants familiar 
+    with the basics configuration of Shibboleth SP. At the end of the training participants should be familiar 
+    with the basic aspects of running a Shibboleth SP.
 </p>
-<p>
-    The aim of this training is to help the resource and service providers to make their resources and services 
-    available to the users through identity federations. If the concept of the identity federation is not familiar 
-    to the reader, the reader should first read the training module <a href=https://aarc-project.eu/documents/training-modules/federations-101/>Federations 101</a>
-    that explains the basic concepts of federated identity. 
-</p>
-
 <p>
     The workshop is a mix of lectures and hands-on lessons where participants will have an apportunity to play 
     around with installing and setting up code.
