--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ a Shibboleth SP.
 <a name="preparation" id="preparation">&nbsp;</a>
 Please read the following documentation before the workshop:
 <ul>
-    <li><a target="_blank" href="https://www.switch.ch/aai/support/presentations/sp-training-2014/">SWITCH AAI Shibboleth Service Provider Training</a></li>
-    <li><a target="_blank" href="https://www.switch.ch/aai/support/presentations/shibboleth-training-2015/">SWITCH AAI Shibboleth Training 2015</a></li>
+    <li><a target="_blank" href="https://aarc-project.eu/documents/training-modules/federations-101/">Federations 101</a></li>
+    
 </ul>
 
