--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ etherpad:
     </ul>
 </p>
 <p>
-    Also, have a look at the documentation from the <a href="#prepararation">Preparation</a> section below.
+    Also, have a look at the documentation from the <a href="#preparation">Preparation</a> section below.
 </p>
 
 <!--
