--- a/index.html
+++ b/index.html
@@ -312,8 +312,7 @@ a Shibboleth SP.
     </div>
 </div>
 
-<h2>Preparation</h2>
-<a name="preparation" id="preparation">&nbsp;</a>
+<h2 id="preparation">Preparation</h2>
 Please read the following documentation before the workshop:
 <ul>
     <li><a target="_blank" href="https://aarc-project.eu/documents/training-modules/federations-101/">Federations 101</a></li>
