--- a/index.html
+++ b/index.html
@@ -164,8 +164,11 @@ etherpad:
 <h2>Workshop Registration</h2>
 
 <h4 class="jumbotron" style="padding: 10px; margin: 0px 0px 10px 0px;">
+    Registration to be opened later.
+<!--
     Register for the workshop
     <a target="_blank" href="https://www.eventbrite.com/e/elixir-aai-workshop-tickets-19929099473">via EventBrite</a>.
+-->    
 </h4>
 
 <hr/>
