--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@ more community specific topics.
 
 <h3>Day 1: Providing online services to a SAML based identity federation using Shibboleth software</h3>
 <p>
+    Trainers: 
+</p>
+<p>
 A resource or service provider needs to install a server called Service Provider (SP) and integrate it with 
 his or her service in order to securely provide resources and services to a SAML based identity federation 
 online. In this submodule the participants install, test and configure a Service Provider using open source 
@@ -232,6 +235,9 @@ a Shibboleth SP.
 <div class="row">
     <div class="col-md-6">
         <h3>ELIXIR</h3>
+        <p>
+            Trainers: 
+        </p>
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
@@ -274,6 +280,9 @@ a Shibboleth SP.
     </div>
     <div class="col-md-6">
         <h3>DARIAH</h3>
+        <p>
+            Trainers: 
+        </p>
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
