--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ more community specific topics.
 
 <h3>Day 1: Providing online services to a SAML based identity federation using Shibboleth software</h3>
 <p>
-    Trainers: 
+    Trainers: Lukas Hämmele (SWITCH)
 </p>
 <p>
 A resource or service provider needs to install a server called Service Provider (SP) and integrate it with 
@@ -236,7 +236,7 @@ a Shibboleth SP.
     <div class="col-md-6">
         <h3>ELIXIR</h3>
         <p>
-            Trainers: 
+            Trainers: Michal Prochazka (ICS), Mikael Linden (CSC)
         </p>
         <table class="table table-striped">
             <tr>
@@ -281,7 +281,7 @@ a Shibboleth SP.
     <div class="col-md-6">
         <h3>DARIAH</h3>
         <p>
-            Trainers: 
+            Trainers: Martin Haase (DAASI)
         </p>
         <table class="table table-striped">
             <tr>
