--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ etherpad:
 <h2>Workshop Information</h2>
 
 <p>
-    The workshop is intended particular for organizations that provide resources and services for ELIXIR (life sciences) a
-    nd DARIAH (art and humanities) research infrastructures. The workshop is divided into two parts. The first part is 
+    The workshop is intended in particular for organizations that provide resources and services for ELIXIR (life sciences) 
+    and DARIAH (art and humanities) research infrastructures. The workshop is divided into two parts. The first part is 
     more generic and useful to any service provider interested in providing online services to SAML based identity 
     federation. The second part is more specific and focuses on integrating a service with ELIXIR and DARIAH research 
     infrastructure respectively.
@@ -26,23 +26,24 @@ etherpad:
 <p>
     The aim of this workshop is to help the service providers to make their resources and services available to the 
     users of the research infrastructure. This workshop has a down-to-earth and hands-on approach that will be rather 
-    technical and detailed at times. The workshop teaches in pracitse how to install the open source Shibboleth 
+    technical and detailed at times. The workshop teaches in practise how to install the open source Shibboleth 
     software needed to integrate in the research infrastructure. The participants will install, test and configure 
     a Service Provider using open source Shibboleth SP software. The goal is to make the participants familiar 
-    with the basics configuration of Shibboleth SP. At the end of the training participants should be familiar 
-    with the basic aspects of running a Shibboleth SP.
+    with the basic configuration of Shibboleth SP. At the end of the training participants should be familiar 
+    with the basic aspects of running a Shibboleth SP and integrating it to ELIXIR or DARIAH research infrastructures.
 </p>
 <p>
-    The workshop is a mix of lectures and hands-on lessons where participants will have an apportunity to play 
+    The workshop is a mix of lectures and hands-on lessons where participants will have an opportunity to play 
     around with installing and setting up code.
 </p>
 <p>
-    Main Goals of the Training
+    Main goals of the training
     <ul>
     <li>Install and configure a Shibboleth Service Provider 2</li>
     <li>Know how and where to configure basic functionalities</li>
     <li>Learn how to protect static web pages and applications</li>
     <li>Understand how attributes can be used within web applications</li>
+    <li>Learn how to integrate the Shibboleth SP to ELIXIR or DARIAH and what additional services they offer</li>
     </ul>
 </p>
 </p>
@@ -92,7 +93,7 @@ etherpad:
     <strong>Requirements:</strong> 
 </p>
 <p>
-    Participants should bring a laptop - if you do not have one, please let the organisers know in advance. You may 
+    Participants should bring a laptop - if you do not have one, please let the organizers know in advance. You may 
     also be paired with someone else.
 </p>
 <p>
@@ -103,8 +104,8 @@ etherpad:
 </p>
 <p>
     The training is performed on a virtual machine (VM). The VM image that can be run in Virtual 
-    Box (recommended) or VMware Player/Fusion. To run the SP Training VM the following minimal r
-    equirements have to be met:
+    Box (recommended) or VMware Player/Fusion. To run the SP Training VM the following minimal 
+    requirements have to be met:
     <ul>
         <li>User must have administration privileges on the laptop</li>
         <li>Any recent (< 4 years) Intel or AMD processor.</li>
@@ -236,7 +237,7 @@ a Shibboleth SP.
     <div class="col-md-6">
         <h3>ELIXIR</h3>
         <p>
-            Trainers: Michal Prochazka (ICS), Mikael Linden (CSC)
+            Trainers: Michal Prochazka (ELIXIR-CZ), Mikael Linden (ELIXIR-FI)
         </p>
         <table class="table table-striped">
             <tr>
@@ -245,7 +246,7 @@ a Shibboleth SP.
             </tr>
             <tr>
                 <td>10:30</td>
-                <td>Coffee Break</td>
+                <td>Coffee break</td>
             </tr>
             <tr>
                 <td>11:00</td>
@@ -261,7 +262,7 @@ a Shibboleth SP.
             </tr>
             <tr>
                 <td>15:00</td>
-                <td>Coffee Break</td>
+                <td>Coffee break</td>
             </tr>
              <tr>
                 <td>15:15</td>
