--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ etherpad:
 <p>
     The aim of this workshop is to help the service providers to make their resources and services available to the 
     users of the research infrastructure. This workshop has a down-to-earth and hands-on approach that will be rather 
-    technical and detailed at times. The workshop teaches in practise how to install the open source Shibboleth 
+    technical and detailed at times. The workshop teaches in practice how to install the open source Shibboleth 
     software needed to integrate in the research infrastructure. The participants will install, test and configure 
     a Service Provider using open source Shibboleth SP software. The goal is to make the participants familiar 
     with the basic configuration of Shibboleth SP. At the end of the training participants should be familiar 
