Changed title and room

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: workshop
 root: .
-title: AAI workshop for service providers
+title: ELIXIR AAI Workshop for Service and Resource Providers
 venue: University of Manchester
-address: Atlas Rooms 1 & 2, Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL
+address: Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL
 latlng: 53.467674, -2.233924
 humandate: 15-16 March 2016
 humantime: 09:00-17:00
