Changes to acknowledgement

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ etherpad:
 
 <hr/>
 
-<h2> Acknowledgement and support</h2>
+<h2> Acknowledgements and Support</h2>
 <p> This workshop is supported by <a target="_blank" href="http://elixir-uk.org/">ELIXIR-UK</a> and the <a target="_blank" href="https://aarc-project.eu/">AARC project</a>.</p>
 
 <hr/>
