Added GÉANT to acknowledgements

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ etherpad:
 <hr/>
 
 <h2> Acknowledgements and Support</h2>
-<p> This workshop is supported by <a target="_blank" href="http://elixir-uk.org/">ELIXIR-UK</a> and the <a target="_blank" href="https://aarc-project.eu/">AARC project</a>.</p>
+<p> This workshop is supported by <a target="_blank" href="http://elixir-uk.org/">ELIXIR-UK</a>, the <a target="_blank" href="https://aarc-project.eu/">AARC project</a> and the <a target="_blank" href="http://www.geant.org/Projects/GEANT_Project_GN4-1/Pages/Home.aspx">GÉANT project</a></p>
 
 <hr/>
 
