--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: workshop
 root: .
-title: ELIXIR and DARIAH "AAI Workshop for Service and Resource Providers"
+title: AAI Workshop for Service and Resource Providers
 venue: University of Manchester
 address: Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL
 latlng: 53.467674, -2.233924
