--- a/index.html
+++ b/index.html
@@ -195,14 +195,18 @@ Shibboleth SP software. The goal is to make the participants familiar with the b
 Shibboleth SP. At the end of the training participants should be familiar with the basic aspects of running 
 a Shibboleth SP.
 </p>
-<p>
+<div class="col-md-6">
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
+                <td>Coffee and arrivals</td>
+            </tr>
+            <tr>
+                <td>09:15</td>
                 <td>Introduction to AAI</td>
             </tr>
             <tr>
-                <td>10:30</td>
+                <td>10:45</td>
                 <td>Coffee break</td>
             </tr>
              <tr>
@@ -230,20 +234,25 @@ a Shibboleth SP.
                 <td>Close</td>
             </tr>
         </table>
+</div>
 <h4>Day 2</h4>
 <div class="row">
     <div class="col-md-6">
-        <h4>ELIXIR</h4>
+        <h4>ELIXIR session</h4>
         <p>
             Trainers: Michal Prochazka (ELIXIR-CZ), Mikael Linden (ELIXIR-FI)
         </p>
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
+                <td>Coffee and arrivals</td>
+            </tr>
+            <tr>
+                <td>09:15</td>
                 <td>Introduction to ELIXIR AAI</td>
             </tr>
             <tr>
-                <td>10:30</td>
+                <td>10:45</td>
                 <td>Coffee break</td>
             </tr>
             <tr>
@@ -274,21 +283,24 @@ a Shibboleth SP.
                 <td>16:30</td>
                 <td>Close</td>
             </tr>
-            
         </table>
     </div>
     <div class="col-md-6">
-        <h4>DARIAH</h4>
+        <h4>DARIAH session</h4>
         <p>
             Trainers: Martin Haase (DAASI)
         </p>
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
+                <td>Coffee and arrivals</td>
+            </tr>
+            <tr>
+                <td>09:15</td>
                 <td>TBA</td>
             </tr>
             <tr>
-                <td>10:30</td>
+                <td>10:45</td>
                 <td>Coffee break</td>
             </tr>
              <tr>
