--- a/index.html
+++ b/index.html
@@ -199,19 +199,19 @@ a Shibboleth SP.
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
-                <td>Coffee and arrivals</td>
+                <td>Welcome and Introductions</td>
             </tr>
             <tr>
                 <td>09:15</td>
-                <td>Introduction to AAI</td>
+                <td>Federated Identity Management, SAML, Shibboleth and VM Setup</td>
             </tr>
             <tr>
-                <td>10:45</td>
+                <td>10:30</td>
                 <td>Coffee break</td>
             </tr>
              <tr>
-                <td>11:00 </td>
-                <td>Shibboleth</td>
+                <td>10:50 </td>
+                <td>Basic Shibboleth SP Installation and Configuration/td>
             </tr>
             <tr>
                 <td>12:30</td>
@@ -219,18 +219,18 @@ a Shibboleth SP.
             </tr>
             <tr>
                 <td>13:30</td>
-                <td>Shibboleth</td>
+                <td>Session Handling and User Attributes</td>
             </tr>
             <tr>
                 <td>15:00</td>
                 <td>Coffee break</td>
             </tr>
             <tr>
-                <td>15:15</td>
-                <td>Shibboleth</td>
+                <td>15:20</td>
+                <td>Access Control, Advanced Topics and Q&A session</td>
             </tr>
             <tr>
-                <td>16:30</td>
+                <td>17:00</td>
                 <td>Close</td>
             </tr>
         </table>
