--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@ Shibboleth SP software. The goal is to make the participants familiar with the b
 Shibboleth SP. At the end of the training participants should be familiar with the basic aspects of running 
 a Shibboleth SP.
 </p>
-<div class="col-md-6">
+<div class="row">
+    <div class="col-md-6">
         <table class="table table-striped">
             <tr>
                 <td>09:00</td>
@@ -234,6 +235,7 @@ a Shibboleth SP.
                 <td>Close</td>
             </tr>
         </table>
+    </div>
 </div>
 <p></p>
 
