--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ a Shibboleth SP.
                 <td>Close</td>
             </tr>
         </table>
+        <table></table>
     </div>
 </div>
 <p></p>
