--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ more community specific topics.
 
 <h4>Day 1: Providing online services to a SAML based identity federation using Shibboleth software</h4>
 <p>
-    Trainers: Lukas Hämmerle (GÉANT/SWITCH)
+    Trainers: Lukas Hämmerle (GÉANT/SWITCH), Martin Haase (DAASI), Mikael Linden (CSC), Irina Mikhailava (GÉANT), Timo Mustonen (CSC)
 </p>
 <p>
 A resource or service provider needs to install a server called Service Provider (SP) and integrate it with 
