Updated Day2 Schedule for DARIAH

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ etherpad:
 <hr/>
 
 <h2> Acknowledgements and Support</h2>
-<p> This workshop is organised and supported by the <a target="_blank" href="https://aarc-project.eu/">AARC project</a>, <a target="_blank" href="https://www.dariah.eu/">DARIAH</a> and <a target="_blank" href="https://de.dariah.eu/">DARIAH-DE</a>, <a target="_blank" href="http://www.elixir-finland.org/">ELIXIR-FI</a> and <a target="_blank" href="http://elixir-uk.org/">ELIXIR-UK</a>, and the <a target="_blank" href="http://www.geant.org/Projects/GEANT_Project_GN4-1/">GÉANT project</a>.</p>
+<p> This workshop is organised and supported by the <a target="_blank" href="https://aarc-project.eu/">AARC project</a>, <a target="_blank" href="https://de.dariah.eu/dariah-de-english">DARIAH-DE</a>, <a target="_blank" href="http://www.elixir-finland.org/">ELIXIR-FI</a> and <a target="_blank" href="http://elixir-uk.org/">ELIXIR-UK</a>, and the <a target="_blank" href="http://www.geant.org/Projects/GEANT_Project_GN4-1/">GÉANT project</a>.</p>
 
 <hr/>
 
@@ -293,7 +293,7 @@ a Shibboleth SP.
     <div class="col-md-6">
         <h4>DARIAH session</h4>
         <p>
-            Trainers: Martin Haase (DAASI)
+            Trainers: Peter Gietz, Martin Haase (DARIAH-DE / DAASI International)
         </p>
         <table class="table table-striped">
             <tr>
@@ -302,7 +302,7 @@ a Shibboleth SP.
             </tr>
             <tr>
                 <td>09:15</td>
-                <td>TBA</td>
+                <td>Introduction to the DARIAH AAI</td>
             </tr>
             <tr>
                 <td>10:45</td>
@@ -310,7 +310,7 @@ a Shibboleth SP.
             </tr>
              <tr>
                 <td>11:00 </td>
-                <td>TBA</td>
+                <td>Configuring the Shibboleth SP for the DARIAH AAI (Overview, and Hands-On Part I)</td>
             </tr>
             <tr>
                 <td>12:30</td>
@@ -318,7 +318,7 @@ a Shibboleth SP.
             </tr>
             <tr>
                 <td>13:30</td>
-                <td>TBA</td>
+                <td>Configuring the Shibboleth SP for the DARIAH AAI (Hands-On Part II)</td>
             </tr>
             <tr>
                 <td>15:00</td>
@@ -326,7 +326,7 @@ a Shibboleth SP.
             </tr>
             <tr>
                 <td>15:15</td>
-                <td>TBA</td>
+                <td>Options for connecting your SP with DARIAH AAI</td>
             </tr>
             <tr>
                 <td>16:15</td>
